[tool.poetry]
name = "ephios-youthwarden"
version = "0.2.1"
description = "This plugin lets youth wardens decide about participations of minors"
authors = ["Julian B. <julian@ephios.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"ephios_youthwarden" = "ephios_youthwarden.apps.PluginApp"
