[tool.poetry]
name = "ephios-youthwarden"
version = "0.0.0"
description = "This plugin lets youth wardens decide about participations of minors"
authors = ["Julian B. <julian@ephios.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.plugins."ephios.plugins"]
"ephios_youthwarden" = "ephios_youthwarden.apps.PluginApp"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
bump = true
